SUBDIRS=. commands 

lib_LTLIBRARIES= libeyedb.la

libeyedb_la_SOURCES=				\
AbstractIterator.cc				\
Agregat.cc					\
AgregatClass.cc					\
Attribute_inv.cc				\
Architecture.cc					\
Argument.cc					\
Argument_code.cc				\
Attribute.cc					\
AttrNative.cc					\
Basic.cc					\
BEQueue.cc					\
BufferString.cc					\
ObjCache.cc					\
Class.cc					\
ClassIterator.cc				\
ClassPeer.cc					\
ClockConverter.cc				\
code.cc						\
CollectionBE.cc					\
CollArray.cc					\
CollBag.cc					\
CollectionClass.cc				\
Collection.cc					\
CollectionIterator.cc				\
CollectionPeer.cc				\
CollList.cc					\
CollSet.cc					\
Config.cc					\
Connection.cc					\
ConnectionPeer.cc				\
Database.cc					\
Datafile.cc					\
Dataspace.cc					\
Date.cc						\
datelib.cc					\
Attribute_idx.cc				\
ClassConversion.cc				\
Enum.cc						\
EnumClass.cc					\
Executable.cc					\
ExecutableCache.cc				\
opts.cc						\
gbx.cc						\
GetOpt.cc					\
GregorianCalendarConverter.cc			\
odlgen_C.cc					\
odlgen_Java.cc					\
odlgen_utils.cc					\
GenContext.cc					\
GenHashTable.cc					\
api.cc						\
DBM_Database.cc					\
syscls_impl.cc					\
kernel.cc					\
api_lib.cc					\
Oid.cc						\
rpc_lib.cc					\
linklist.cc					\
misc.cc						\
IndexImpl.cc					\
Instance.cc					\
InvOidContext.cc				\
Iterator.cc					\
IteratorBE.cc					\
ObjectLocation.cc				\
Log.cc						\
make_obj.cc					\
SchemaInfo.cc					\
Object.cc					\
ObjectPeer.cc					\
odl.cc						\
odl_update.cc					\
OQLBE.cc					\
OQL.cc						\
OQLBEIterator.cc				\
OQLIterator.cc					\
oqlarr.cc					\
oqlatom.cc					\
oqlbase.cc					\
oqlcast.cc					\
oqlcoll.cc					\
oqldot.cc					\
oqlflwctl.cc					\
oqlfunc.cc					\
oqlident.cc					\
oqliter.cc					\
IteratorBEEngine.cc				\
oqllib.cc					\
oqllist.cc					\
oqlmisc.cc					\
oqlmth.cc					\
oqlnewdel.cc					\
oqlop.cc					\
oqlselect.cc					\
oqlset.cc					\
oqlsort.cc					\
oqltime.cc					\
OString.cc					\
IteratorAtom.cc					\
RecMode.cc					\
Schema.cc					\
SessionLog.cc					\
Exception.cc					\
StructClass.cc					\
ThreadPoolManager.cc				\
Time.cc						\
TimeInterval.cc					\
TimeStamp.cc					\
Transaction.cc					\
TransactionParams.cc				\
Union.cc					\
UnionClass.cc					\
Value.cc					\
ValueCache.cc					\
DBM.cc						\
syscls.cc					\
oqlctb.cc					\
utils.cc					\
version.cc

nodist_libeyedb_la_SOURCES=			\
odl.tab.cc					\
oql.tab.cc					

BUILT_SOURCES=lex.oql.c lex.odl.c $(top_srcdir)/src/eyedb/DBM.cc $(top_srcdir)/src/eyedb/syscls.cc $(top_srcdir)/src/eyedb/oqlctb.cc $(top_srcdir)/src/eyedb/utils.cc

# The last directory is needed for endian.h, which is generated by configure.in
INCLUDES=-I$(top_srcdir)/src -I$(top_srcdir)/include -I$(top_builddir)/include

# Special compile line for compile_builtin
eyedb_databasedir=@eyedb_databasedir@
eyedb_pipedir=@eyedb_pipedir@
eyedb_tmpdir=@eyedb_tmpdir@

compile_builtin.lo: $(srcdir)/compile_builtin.cc
	$(LTCXXCOMPILE) \
		-DARCH=\"$(host)\" \
		-DCPU=\"$(host_cpu)\" \
		-DOS=\"$(host_os)\" \
		-DCXX=\"$(CXX)\" \
		-DBINDIR=\"$(bindir)\" \
		-DSBINDIR=\"$(sbindir)\" \
		-DLIBDIR=\"$(libdir)\" \
		-DEYEDBSM_DATABASEDIR=\"$(eyedb_databasedir)\" \
		-DEYEDBSM_PIPEDIR=\"$(eyedb_pipedir)\" \
		-DEYEDBSM_TMPDIR=\"$(eyedb_tmpdir)\" \
		-DSYSCONFDIR=\"$(sysconfdir)\" \
		-DPKGDATADIR=\"$(pkgdatadir)\" \
		-c -o $@ $<

libeyedb_la_LIBADD=compile_builtin.lo
libeyedb_la_LINK= $(LTCXXCOMPILE) -c -o comp_time.lo $(srcdir)/comp_time.cc ; $(CXXLINK) $(libeyedb_la_LDFLAGS) comp_time.lo
libeyedb_la_LDFLAGS= -release $(EYEDB_VERSION)

CLEANFILES=oql.tab.cc odl.tab.cc oql.output odl.output $(BUILT_SOURCES)

%.tab.cc: $(srcdir)/%.y
	$(YACC) -b $* -v $(srcdir)/$*.y
	sed s/yy/$*/g $*.tab.c > $*.tab.cc
	rm $*.tab.c

lex.%.c: $(srcdir)/%.l
	USEFLEX=1 $(top_srcdir)/scripts/eyedb-lex $(srcdir)/$*

# ODL->C++
EYEDBODL_exe=$(bindir)/eyedbodl

EYEDBODL = $(EYEDBODL_exe) --gencode=C++ --output-dir=$(top_srcdir)/src/eyedb

EYEDBODLFLAGS_DBM = --package=DBM --schema-name=eyedbdbm --attr-style=implicit --no-rootclass --namespace=eyedb

$(top_srcdir)/src/eyedb/DBM.cc $(top_srcdir)/include/eyedb/DBM.h : DBM.odl
	@if test -x $(EYEDBODL_exe) ; then \
		$(EYEDBODL) $(EYEDBODLFLAGS_DBM) $< ; \
		sed -e 's|"DBM.h"|<eyedb/DBM.h>|' $(top_srcdir)/src/eyedb/DBM.cc > DBM.cc.out ; \
		mv DBM.cc.out $(top_srcdir)/src/eyedb/DBM.cc; \
		mv $(top_srcdir)/src/eyedb/DBM.h $(top_srcdir)/include/eyedb/. ; \
	else \
		echo Warning: $(EYEDBODL) not found, using $*.cc old C++ code; \
		touch $(top_srcdir)/src/eyedb/DBM.cc $(top_srcdir)/include/eyedb/DBM.h ; \
	fi

EYEDBODLFLAGS_syscls = --cpp-flags=-DCOMPLETE=0 --export --package=syscls --schema-name=eyedb --attr-style=explicit --down-casting=yes --class-enums=no --no-rootclass --system-class --namespace=eyedb

$(top_srcdir)/src/eyedb/syscls.cc $(top_srcdir)/include/eyedb/syscls.h: syscls.odl
	if test -x $(EYEDBODL_exe) ; then \
		$(EYEDBODL) $(EYEDBODLFLAGS_syscls) $< ; \
		for f in syscls.cc sysclsstubsbe.cc sysclsstubsfe.cc ; do \
			sed -e 's|"syscls.h"|<eyedb/syscls.h>|' $(top_srcdir)/src/eyedb/$$f > $$f.out; \
			mv $$f.out $(top_srcdir)/src/eyedb/$$f; \
		done; \
		mv $(top_srcdir)/src/eyedb/syscls.h $(top_srcdir)/include/eyedb/. ; \
	else \
		echo Warning: $(EYEDBODL_exe) not found, using $*.cc old C++ code; \
		touch $(top_srcdir)/src/eyedb/syscls.cc $(top_srcdir)/include/eyedb/syscls.h ; \
	fi

EYEDBODLFLAGS_oqlctb = --package=oqlctb --schema-name=eyedb --attr-style=explicit --down-casting=yes --class-enums=yes --no-rootclass --error-policy=status --system-class --namespace=eyedb

$(top_srcdir)/src/eyedb/oqlctb.cc $(top_srcdir)/include/eyedb/oqlctb.h: oqlctb.odl
	if test -x $(EYEDBODL_exe) ; then \
		$(EYEDBODL) $(EYEDBODLFLAGS_oqlctb) $< ; \
	else \
		echo Warning: $(EYEDBODL_exe) not found, using $*.cc old C++ code; \
		touch $(top_srcdir)/src/eyedb/oqlctb.cc $(top_srcdir)/include/eyedb/oqlctb.h ; \
	fi

EYEDBODLFLAGS_utils = --export --package=utils --schema-name=eyedb --attr-style=explicit --down-casting=yes --class-enums=yes --no-rootclass --system-class --error-policy=exception --namespace=eyedb

$(top_srcdir)/src/eyedb/utils.cc $(top_srcdir)/include/eyedb/utils.h: utils.odl
	if test -x $(EYEDBODL_exe) ; then \
		$(EYEDBODL) $(EYEDBODLFLAGS_utils) $< ; \
		for f in utils.cc utilsstubsbe.cc utilsstubsfe.cc ; do \
			sed -e 's|"utils.h"|<eyedb/utils.h>|' $(top_srcdir)/src/eyedb/$$f > $$f.out; \
			mv $$f.out $(top_srcdir)/src/eyedb/$$f; \
		done; \
		mv $(top_srcdir)/src/eyedb/utils.h $(top_srcdir)/include/eyedb/. ; \
	else \
		echo Warning: $(EYEDBODL_exe) not found, using $*.cc old C++ code; \
		touch $(top_srcdir)/src/eyedb/utils.cc $(top_srcdir)/include/eyedb/utils.h ; \
	fi

EXTRA_DIST= odl.l odl.y oql.l oql.y DBM.odl syscls.odl oqlctb.odl utils.odl comp_time.cc comp_time.h make_pattern.cc

somthdir=$(pkglibdir)
somth_LTLIBRARIES=oqlctbmthfe.la utilsmthfe.la 

oqlctbmthfe_la_SOURCES=oqlctbmthfe.cc oqlctbstubsfe.cc
oqlctbmthfe_la_LDFLAGS=-module -release $(EYEDB_VERSION)
oqlctbmthfe_la_DEPENDENCIES= $(top_srcdir)/VERSION

utilsmthfe_la_SOURCES=utilsmthfe.cc utilsstubsfe.cc
utilsmthfe_la_LDFLAGS=-module -release $(EYEDB_VERSION)
utilsmthfe_la_DEPENDENCIES= $(top_srcdir)/VERSION

bin_PROGRAMS=					\
eyedbodl					\
eyedbgetenv

sbin_PROGRAMS=					\
eyedbd						\
eyedbctl

#FD CHECK
#EYEDBSVLIBS=libeyedb.la $(top_builddir)/src/lib/libeyedbrpcbe.la $(top_builddir)/src/lib/libeyedbrpcfe.la $(top_builddir)/src/eyedbsm/libeyedbsm.la $(top_builddir)/src/lib/libeyedbutils.la
EYEDBSVLIBS=libeyedb.la @EYEDBSM_LIBS@

#FD CHECK
#EYEDBCLLIBS=libeyedb.la $(top_builddir)/src/lib/libeyedbrpcfe.la $(top_builddir)/src/eyedbsm/libeyedbsm.la $(top_builddir)/src/lib/libeyedbutils.la
EYEDBCLLIBS=libeyedb.la  @EYEDBSM_LIBS@

eyedbd_SOURCES= eyedbd.cc serv.cc serv_lib.cc rpc_lib.cc misc.cc
eyedbd_LDADD= $(EYEDBSVLIBS)
eyedbd_CFLAGS = $(AM_CFLAGS) # renaming trick
eyedbd_CXXFLAGS = $(AM_CXXFLAGS) # renaming trick

eyedbodl_SOURCES= eyedbodl.cc
eyedbodl_LDADD= $(EYEDBCLLIBS)

eyedbgetenv_SOURCES= eyedbgetenv.cc
eyedbgetenv_LDADD= $(EYEDBCLLIBS)

eyedbctl_SOURCES= eyedbctl.cc
eyedbctl_LDADD= $(EYEDBCLLIBS)

noinst_HEADERS= \
api_lib.h \
Argument_code.h \
Attribute_p.h \
AttrNative.h \
base_p.h \
BEQueue.h \
BufferString.h \
CalendarConverter.h \
ClockConverter.h \
code.h \
CollCache.h \
CollectionBE.h \
CollectionPeer.h \
ConnectionPeer.h \
datelib.h \
DBM_Database.h \
db_p.h \
ExecutableCache.h \
Executable.h \
eyedb_p.h \
GenContext.h \
GetOpt.h \
GregorianCalendarConverter.h \
InvOidContext.h \
IteratorAtom.h \
IteratorBEEngine.h \
IteratorBE.h \
Iterator.h \
kernel.h \
kernel_p.h \
make_obj.h \
misc.h \
odlgen_utils.h \
odl.h \
OQLBE.h \
OQLBEIterator.h \
oqlctb.h \
oql_p.h \
oqlinline.h \
oqliter.h \
rpc.h \
rpc_lib.h \
SchemaInfo.h \
serv_lib.h \
SessionLog.h \
ThreadPoolManager.h \
UserDataHT.h \
ValueCache.h \
version_p.h
